Improvised the model

--- a/Category Predictor.ipynb
+++ b/Category Predictor.ipynb
@@ -16,8 +16,7 @@
     "import pickle\n",
     "import pandas as pd\n",
     "from sklearn.svm import SVC \n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
@@ -55,81 +54,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_file = open(\"pickled_data/test_data.pickle\", \"rb\")\n",
-    "test_data = pickle.load(open_file)\n",
-    "open_file.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Predict the category for testing data"
+    "test_data_df = pd.read_csv('processed_data/test_data.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_x = [data[0] for data in test_data]\n",
-    "test_inv_id = [data[1] for data in test_data] \n",
-    "\n",
-    "cv = CountVectorizer(max_features = 100)\n",
-    "\n",
-    "test_x = cv.fit_transform(test_x).toarray()\n",
-    "\n",
-    "pred_test_y = svc_classifier.predict(test_x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Save predicted category in local csv file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_array = []\n",
-    "for i in range(len(pred_test_y)):\n",
-    "    output_array.append((test_inv_id[i], pred_test_y[i]))\n",
-    "    \n",
-    "output_df = pd.DataFrame(output_array, columns=['Inv_Id','Product_Category'])\n",
-    "\n",
-    "output_df.set_index('Inv_Id', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['CLASS-1758', 'CLASS-1322', 'CLASS-1919', 'CLASS-1721',\n",
-       "       'CLASS-2003', 'CLASS-1828', 'CLASS-1429', 'CLASS-1274',\n",
-       "       'CLASS-1983'], dtype=object)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output_df['Product_Category'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,97 +83,277 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Product_Category</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Inv_Id</th>\n",
-       "      <th></th>\n",
+       "      <th>Vendor_Code</th>\n",
+       "      <th>GL_Code</th>\n",
+       "      <th>Inv_Amt</th>\n",
+       "      <th>Item_Description</th>\n",
+       "      <th>GL_Code_0</th>\n",
+       "      <th>GL_Code_1</th>\n",
+       "      <th>GL_Code_2</th>\n",
+       "      <th>GL_Code_3</th>\n",
+       "      <th>GL_Code_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Item_Description_65</th>\n",
+       "      <th>Item_Description_66</th>\n",
+       "      <th>Item_Description_67</th>\n",
+       "      <th>Item_Description_68</th>\n",
+       "      <th>Item_Description_69</th>\n",
+       "      <th>Item_Description_70</th>\n",
+       "      <th>Item_Description_71</th>\n",
+       "      <th>Item_Description_72</th>\n",
+       "      <th>Item_Description_73</th>\n",
+       "      <th>Item_Description_74</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15003</th>\n",
-       "      <td>CLASS-1758</td>\n",
+       "      <th>0</th>\n",
+       "      <td>15003</td>\n",
+       "      <td>VENDOR-2513</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.13</td>\n",
+       "      <td>travel entertainment miscellaneous company car...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15008</th>\n",
-       "      <td>CLASS-1322</td>\n",
+       "      <th>1</th>\n",
+       "      <td>15008</td>\n",
+       "      <td>VENDOR-1044</td>\n",
+       "      <td>7</td>\n",
+       "      <td>96.56</td>\n",
+       "      <td>final site clean store construction advanced m...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15013</th>\n",
-       "      <td>CLASS-1322</td>\n",
+       "      <th>2</th>\n",
+       "      <td>15013</td>\n",
+       "      <td>VENDOR-1254</td>\n",
+       "      <td>7</td>\n",
+       "      <td>55.93</td>\n",
+       "      <td>arabian american development co final site cle...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15019</th>\n",
-       "      <td>CLASS-1322</td>\n",
+       "      <th>3</th>\n",
+       "      <td>15019</td>\n",
+       "      <td>VENDOR-1331</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.62</td>\n",
+       "      <td>corporate services contingent labor temp labor...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15020</th>\n",
-       "      <td>CLASS-1758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15022</th>\n",
-       "      <td>CLASS-1758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15024</th>\n",
-       "      <td>CLASS-1322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15026</th>\n",
-       "      <td>CLASS-1322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15027</th>\n",
-       "      <td>CLASS-1919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15028</th>\n",
-       "      <td>CLASS-1721</td>\n",
+       "      <th>4</th>\n",
+       "      <td>15020</td>\n",
+       "      <td>VENDOR-2513</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25.81</td>\n",
+       "      <td>fortune national corp miscellaneous company ca...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 89 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Product_Category\n",
-       "Inv_Id                 \n",
-       "15003        CLASS-1758\n",
-       "15008        CLASS-1322\n",
-       "15013        CLASS-1322\n",
-       "15019        CLASS-1322\n",
-       "15020        CLASS-1758\n",
-       "15022        CLASS-1758\n",
-       "15024        CLASS-1322\n",
-       "15026        CLASS-1322\n",
-       "15027        CLASS-1919\n",
-       "15028        CLASS-1721"
+       "   Inv_Id  Vendor_Code  GL_Code  Inv_Amt  \\\n",
+       "0   15003  VENDOR-2513        3    56.13   \n",
+       "1   15008  VENDOR-1044        7    96.56   \n",
+       "2   15013  VENDOR-1254        7    55.93   \n",
+       "3   15019  VENDOR-1331        0    32.62   \n",
+       "4   15020  VENDOR-2513        3    25.81   \n",
+       "\n",
+       "                                    Item_Description  GL_Code_0  GL_Code_1  \\\n",
+       "0  travel entertainment miscellaneous company car...        0.0        0.0   \n",
+       "1  final site clean store construction advanced m...        0.0        0.0   \n",
+       "2  arabian american development co final site cle...        0.0        0.0   \n",
+       "3  corporate services contingent labor temp labor...        1.0        0.0   \n",
+       "4  fortune national corp miscellaneous company ca...        0.0        0.0   \n",
+       "\n",
+       "   GL_Code_2  GL_Code_3  GL_Code_4         ...           Item_Description_65  \\\n",
+       "0        0.0        1.0        0.0         ...                             0   \n",
+       "1        0.0        0.0        0.0         ...                             1   \n",
+       "2        0.0        0.0        0.0         ...                             1   \n",
+       "3        0.0        0.0        0.0         ...                             0   \n",
+       "4        0.0        1.0        0.0         ...                             0   \n",
+       "\n",
+       "   Item_Description_66  Item_Description_67  Item_Description_68  \\\n",
+       "0                    0                    0                    0   \n",
+       "1                    0                    1                    0   \n",
+       "2                    0                    1                    0   \n",
+       "3                    0                    0                    2   \n",
+       "4                    0                    0                    0   \n",
+       "\n",
+       "   Item_Description_69  Item_Description_70  Item_Description_71  \\\n",
+       "0                    0                    0                    1   \n",
+       "1                    0                    0                    0   \n",
+       "2                    0                    0                    0   \n",
+       "3                    0                    0                    0   \n",
+       "4                    0                    0                    1   \n",
+       "\n",
+       "   Item_Description_72  Item_Description_73  Item_Description_74  \n",
+       "0                    1                    0                    0  \n",
+       "1                    0                    0                    0  \n",
+       "2                    0                    0                    0  \n",
+       "3                    0                    0                    0  \n",
+       "4                    1                    0                    0  \n",
+       "\n",
+       "[5 rows x 89 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_df.head(10)"
+    "test_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict the category for testing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_df.to_csv('mnb_predicted_category.csv')"
+    "test_X = test_data_df.iloc[:,5:89]\n",
+    "pred_test_Y = svc_classifier.predict(test_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save predicted category in local csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_array = []\n",
+    "for i in range(len(pred_test_Y)):\n",
+    "    output_array.append((test_data_df.iloc[i,0], pred_test_Y[i]))\n",
+    "    \n",
+    "output_df = pd.DataFrame(output_array, columns=['Inv_Id','Product_Category'])\n",
+    "\n",
+    "output_df.set_index('Inv_Id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df.to_csv('svc_predicted_category.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2446, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_df.shape"
+   ]
   }
  ],
  "metadata": {
