--- a/Model Trainer.ipynb
+++ b/Model Trainer.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import pickle\n",
     "import random\n",
     "from sklearn.svm import SVC \n",
@@ -35,25 +36,251 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_file = open(\"pickled_data/train_data.pickle\", \"rb\")\n",
-    "train_data = pickle.load(open_file)\n",
-    "open_file.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Shuffling training data"
+    "train_data_df = pd.read_csv('processed_data/train_data.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inv_Id</th>\n",
+       "      <th>Vendor_Code</th>\n",
+       "      <th>GL_Code</th>\n",
+       "      <th>Inv_Amt</th>\n",
+       "      <th>Item_Description</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>GL_Code_0</th>\n",
+       "      <th>GL_Code_1</th>\n",
+       "      <th>GL_Code_2</th>\n",
+       "      <th>GL_Code_3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Item_Description_65</th>\n",
+       "      <th>Item_Description_66</th>\n",
+       "      <th>Item_Description_67</th>\n",
+       "      <th>Item_Description_68</th>\n",
+       "      <th>Item_Description_69</th>\n",
+       "      <th>Item_Description_70</th>\n",
+       "      <th>Item_Description_71</th>\n",
+       "      <th>Item_Description_72</th>\n",
+       "      <th>Item_Description_73</th>\n",
+       "      <th>Item_Description_74</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15001</td>\n",
+       "      <td>VENDOR-1676</td>\n",
+       "      <td>5</td>\n",
+       "      <td>83.24</td>\n",
+       "      <td>artworking typesetting production jun champion...</td>\n",
+       "      <td>CLASS-1963</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15002</td>\n",
+       "      <td>VENDOR-1883</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.18</td>\n",
+       "      <td>auto leasing corporate services corning inc ny...</td>\n",
+       "      <td>CLASS-1250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15004</td>\n",
+       "      <td>VENDOR-1999</td>\n",
+       "      <td>2</td>\n",
+       "      <td>79.02</td>\n",
+       "      <td>store management lease rent deltona corp real ...</td>\n",
+       "      <td>CLASS-1274</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15005</td>\n",
+       "      <td>VENDOR-1771</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48.50</td>\n",
+       "      <td>store construction general requirements coloni...</td>\n",
+       "      <td>CLASS-1522</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15006</td>\n",
+       "      <td>VENDOR-1331</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63.35</td>\n",
+       "      <td>jul aydin corp contingent labor temp labor con...</td>\n",
+       "      <td>CLASS-1376</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 90 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Inv_Id  Vendor_Code  GL_Code  Inv_Amt  \\\n",
+       "0   15001  VENDOR-1676        5    83.24   \n",
+       "1   15002  VENDOR-1883        0    51.18   \n",
+       "2   15004  VENDOR-1999        2    79.02   \n",
+       "3   15005  VENDOR-1771        7    48.50   \n",
+       "4   15006  VENDOR-1331        0    63.35   \n",
+       "\n",
+       "                                    Item_Description Product_Category  \\\n",
+       "0  artworking typesetting production jun champion...       CLASS-1963   \n",
+       "1  auto leasing corporate services corning inc ny...       CLASS-1250   \n",
+       "2  store management lease rent deltona corp real ...       CLASS-1274   \n",
+       "3  store construction general requirements coloni...       CLASS-1522   \n",
+       "4  jul aydin corp contingent labor temp labor con...       CLASS-1376   \n",
+       "\n",
+       "   GL_Code_0  GL_Code_1  GL_Code_2  GL_Code_3         ...           \\\n",
+       "0        0.0        0.0        0.0        0.0         ...            \n",
+       "1        1.0        0.0        0.0        0.0         ...            \n",
+       "2        0.0        0.0        1.0        0.0         ...            \n",
+       "3        0.0        0.0        0.0        0.0         ...            \n",
+       "4        1.0        0.0        0.0        0.0         ...            \n",
+       "\n",
+       "   Item_Description_65  Item_Description_66  Item_Description_67  \\\n",
+       "0                    0                    1                    0   \n",
+       "1                    0                    0                    0   \n",
+       "2                    0                    0                    1   \n",
+       "3                    1                    0                    1   \n",
+       "4                    0                    0                    0   \n",
+       "\n",
+       "   Item_Description_68  Item_Description_69  Item_Description_70  \\\n",
+       "0                    0                    0                    0   \n",
+       "1                    0                    0                    0   \n",
+       "2                    0                    0                    0   \n",
+       "3                    0                    0                    0   \n",
+       "4                    2                    0                    0   \n",
+       "\n",
+       "   Item_Description_71  Item_Description_72  Item_Description_73  \\\n",
+       "0                    0                    0                    0   \n",
+       "1                    0                    0                    0   \n",
+       "2                    0                    0                    0   \n",
+       "3                    0                    0                    1   \n",
+       "4                    0                    0                    0   \n",
+       "\n",
+       "   Item_Description_74  \n",
+       "0                    1  \n",
+       "1                    0  \n",
+       "2                    0  \n",
+       "3                    0  \n",
+       "4                    0  \n",
+       "\n",
+       "[5 rows x 90 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "random.shuffle(train_data)"
+    "train_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting required data"
    ]
   },
   {
@@ -62,25 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = [data[0] for data in train_data]\n",
-    "Y = [data[1] for data in train_data]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Convert traing data into feature vectors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = CountVectorizer(max_features = 100) \n",
-    "X = cv.fit_transform(X).toarray()"
+    "X = train_data_df.iloc[:,6:90]\n",
+    "Y = train_data_df.iloc[:,5]"
    ]
   },
   {
@@ -92,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,19 +338,19 @@
        "    shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier = SVC() \n",
-    "classifier.fit(train_x, train_y)"
+    "classifierSVC = SVC() \n",
+    "classifierSVC.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +359,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVC_pred_val_y = classifier.predict(val_x)\n",
+    "SVC_pred_val_y = classifierSVC.predict(val_x)\n",
     "MNB_pred_val_y = classifierMNB.predict(val_x)"
    ]
   },
@@ -178,15 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC Classifier accuracy is 97.21723518850987%\n",
-      "MNB Classifier accuracy is 97.30700179533214%\n"
+      "SVC Classifier accuracy is 96.76840215439856%\n",
+      "MNB Classifier accuracy is 96.22980251346499%\n"
      ]
     }
    ],
@@ -204,7 +414,7 @@
    "outputs": [],
    "source": [
     "save_svc_classifier = open(\"pickled_classifiers/svc_classifier.pickle\",\"wb\")\n",
-    "pickle.dump(classifier, save_svc_classifier)\n",
+    "pickle.dump(classifierSVC, save_svc_classifier)\n",
     "save_svc_classifier.close()"
    ]
   },
@@ -218,13 +428,6 @@
     "pickle.dump(classifierMNB, save_mnb_classifier)\n",
     "save_mnb_classifier.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
